<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BBCT for Android.

 Copyright 2012 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">BBCT Common</string>
    <string name="provider_name">BBCT Data</string>

    <!-- Activity titles -->
    <string name="bbct_title">BBCT Common - %1$s</string>
    <string name="card_details_title">Card Details</string>
    <string name="player_details_title">Player Details</string>
    <string name="filter_cards_title">Filter Options</string>
    <string name="filter_options_title">Filter Options</string>
    <string name="year_filter_title">Filter By Year</string>
    <string name="number_filter_title">Filter By Number</string>
    <string name="year_and_number_filter_title">Filter By Year and Number</string>
    <string name="player_name_filter_title">Filter By Player Name</string>
    <string name="team_filter_title">Filter By Team</string>
    <string name="about_title">About</string>
    <string name="input_error_title">Input Error</string>
    <string name="duplicate_card_title">Duplicate Card</string>

    <string name="start">Tap (+) to get started.</string>
    <string name="empty_list">No cards found.</string>

    <!-- Labels for card details -->
    <string name="brand_label">Card Brand:</string>
    <string name="year_label">Card Year:</string>
    <string name="number_label">Card Number:</string>
    <string name="value_label">Card Value:</string>
    <string name="count_label">Card Count:</string>
    <string name="player_name_label">Player Name:</string>
    <string name="team_label">Team:</string>
    <string name="player_position_label">Player Position:</string>
    <string name="filter_by_label">Filter By&#8230;</string>

    <!-- Column headings for card list -->
    <string name="brand_col">Brand</string>
    <string name="year_col">Year</string>
    <string name="number_col">#</string>
    <string name="value_col">Value</string>
    <string name="count_col">Count</string>
    <string name="player_name_col">Player Name</string>
    <string name="player_position_col">Player Position</string>

    <!-- Button text -->
    <string name="save_button">Save</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="done_button">Done</string>

    <!-- Hints for TextEdit widgets -->
    <string name="brand_hint">Enter card brand name.</string>
    <string name="year_hint">Enter card year.</string>
    <string name="number_hint">Enter card number.</string>
    <string name="value_hint">Enter card value.</string>
    <string name="count_hint">Enter card count.</string>
    <string name="player_name_hint">Enter player name.</string>
    <string name="team_hint">Enter player\'s team.</string>
    <string name="player_position_hint">Enter player position.</string>

    <!-- Radio button labels -->
    <string name="year_radio_button">Year</string>
    <string name="number_radio_button">Number</string>
    <string name="year_and_number_radio_button">Year and Number</string>
    <string name="player_name_radio_button">Player Name</string>
    <string name="team_radio_button">Team</string>
    
    <!-- Filter cards TextView labels -->
    <string name="year_option">Year</string>
    <string name="number_option">Number</string>
    <string name="brand_option">Brand</string>
    <string name="player_name_option">Name</string>
    <string name="team_option">Team</string>

    <!-- Menu text -->
    <string name="add_menu">Add Cards</string>
    <string name="filter_menu">Filter Cards</string>
    <string name="clear_filter_menu">Clear Filter</string>
    <string name="about_menu">About</string>
    <string name="delete_menu">Delete Cards</string>

    <!-- Text in About activity -->
    <string name="version_text">Version %1$s</string>
    <string name="version_number">0.5.x</string>
    <string name="copyright">Copyright 2012-14 by codeguru</string>
    <string name="email"><b>Email:</b> &lt;bbct-list@lists.sourceforge.net&gt;</string>
    <string name="website"><b>Website:</b> &lt;https://github.com/BaseballCardTracker/bbct/wiki&gt;</string>
    <string name="license">This software is licensed under the GPL. Visit\nhttp://www.gnu.org/licenses/ for a copy of the license.</string>
    <string name="about">
        BBCT is a simple database app for your baseball card collection.
        You can add information about the cards in your collection, view
        details about individual cards, and filter the list of cards according
        to a limited set of criteria. BBCT helps you organize your collection
        and quickly look up which cards you own. Feel free to email your
        feedback and comments or visit the project website.
    </string>

    <!-- Card details toasts -->
    <string name="card_added_message">Card added successfully.</string>
    <string name="card_deleted_message">Cards deleted successfully.</string>

    <!-- Strings for position spinner in card details activity -->
    <string-array name="positions">
        <item>Pitcher</item>
        <item>Catcher</item>
        <item>First Base</item>
        <item>Second Base</item>
        <item>Third Base</item>
        <item>Shortstop</item>
        <item>Left Field</item>
        <item>Center Field</item>
        <item>Right Field</item>
    </string-array>

    <!-- Error messages-->
    <string name="no_radio_button_error">Please select an option.</string>
    <string name="brand_input_error">Please enter a brand name.</string>
    <string name="year_input_error">Please enter a year.</string>
    <string name="number_input_error">Please enter a card number.</string>
    <string name="value_input_error">Please enter the card\'s value.</string>
    <string name="count_input_error">Please enter the number of cards you own.</string>
    <string name="player_name_input_error">Please enter the player\'s name.</string>
    <string name="team_input_error">Please enter the player\'s team.</string>
    <string name="player_position_input_error">Please enter the player\'s position.</string>
    <string name="invalid_uri_error">Invalid URI: %1$s</string>
    <string name="database_error">Error occured while connecting to database.</string>
    <string name="duplicate_card_error">Baseball card already exists. Please update its count.</string>
    <string name="sponsor">Proud Sponsor of:</string>

</resources>
