<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">
        
        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1" >
            
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                <CheckBox
                    android:id="@+id/brand_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClick" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/option_size"
                    android:text="@string/brand_option" />
                
                <EditText
                    android:id="@+id/brand_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/brand_hint"
                    android:inputType="textCapWords"
                    android:enabled="false"
                    android:singleLine="true" >
                </EditText>
                    
            </TableRow>
            
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                <CheckBox
                    android:id="@+id/year_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckBoxClick" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/option_size"
                    android:text="@string/year_option" />
                
                <EditText
                    android:id="@+id/year_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/year_hint"
                    android:inputType="number"
                    android:enabled="false"
                    android:singleLine="true">
                </EditText>
                
            </TableRow>

	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	           
	           <CheckBox
	               android:id="@+id/number_check"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:onClick="onCheckBoxClick" />
	
	           <TextView
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textSize="@dimen/option_size"
	               android:text="@string/number_option" />
	
	           <EditText
	               android:id="@+id/number_input"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:hint="@string/number_hint"
	               android:inputType="number"
	               android:enabled="false"
	               android:singleLine="true">
	           </EditText>
	            
	        </TableRow>

	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	           
	           <CheckBox
	               android:id="@+id/player_name_check"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:onClick="onCheckBoxClick" />
	
	           <TextView
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textSize="@dimen/option_size"
	               android:text="@string/player_name_option" />
	
	           <EditText
	               android:id="@+id/player_name_input"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:hint="@string/player_name_hint"
	               android:inputType="textCapWords"
	               android:enabled="false"
	               android:singleLine="true">
	           </EditText>
	                       
	        </TableRow>
        
	       <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	           
	           <CheckBox
	               android:id="@+id/team_check"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:onClick="onCheckBoxClick" />
	
	           <TextView
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:textSize="@dimen/option_size"
	               android:text="@string/team_option" />
	
	           <EditText
	               android:id="@+id/team_input"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:hint="@string/team_hint"
	               android:inputType="textCapWords"
	               android:enabled="false"
	               android:singleLine="true">
	           </EditText>
	                       
	        </TableRow>        
        
        </TableLayout>
    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal">
	
	        <Button
	            android:id="@id/cancel_button"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/cancel_button" />
	
	        <Button
	            android:id="@id/ok_button"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:enabled="false"
	            android:text="@string/ok_button" />
	        
	    </LinearLayout>
    
    </LinearLayout>
    
</ScrollView>