<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
>
    <TextView
        android:text="@string/brand_col"
        android:layout_width="@dimen/brand_col_width"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold"
    />
    <TextView
        android:text="@string/year_col"
        android:layout_width="@dimen/year_col_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold"
    />
    <TextView
        android:text="@string/number_col"
        android:layout_width="@dimen/number_col_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold"
    />
    <TextView
        android:text="@string/player_name_col"
        android:layout_width="@dimen/player_name_col_width"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold"
    />
    <CheckedTextView
        android:id="@+id/checkmark"
        android:checkMark="@drawable/checkmark"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
