<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BBCT for Android.

 Copyright 2012 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:paddingLeft="3dp"
              android:paddingRight="3dp"
>
    <CheckedTextView
        android:id="@+id/checkmark"
        android:checkMark="@drawable/checkmark"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingRight="4dp"
    />
    <TextView
        android:text="@string/brand_col"
        android:layout_width="@dimen/brand_col_width"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold"
    />
    <TextView
        android:text="@string/year_col"
        android:layout_width="@dimen/year_col_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold"
    />
    <TextView
        android:text="@string/number_col"
        android:layout_width="@dimen/number_col_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold"
    />
    <TextView
        android:text="@string/player_name_col"
        android:layout_width="@dimen/player_name_col_width"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold"
    />
</LinearLayout>
